# tree-sitter-arduino

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/scripts/: body.jq
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml  update.yml
bindings/c/: tree-sitter-arduino.pc.in
bindings/c/tree_sitter/: tree-sitter-arduino.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_arduino/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterArduinoTests/: TreeSitterArduinoTests.swift
src/: grammar.json  node-types.json  scanner.c  scanner.cc
test/corpus/: basic.txt
test/highlight/: example.ino
test/tags/: example.ino
