[package]
name = "tree-sitter-arduino"
description = "Arduino grammar for the tree-sitter parsing library"
version = "0.21.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "arduino"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-arduino"
authors = ["ObserverOfTime <chronobserver@disroot.org>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
  "queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "^0.23.0"

[build-dependencies]
cc = "^1.0.90"
