[package]
name = "tree-sitter-arduino"
description = "Arduino grammar for tree-sitter"
version = "0.24.0"
authors = ["ObserverOfTime <chronobserver@disroot.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "arduino"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-arduino"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2.4"

[dev-dependencies]
tree-sitter = "0.24.5"
